# SYCLomatic-test

./: .gitignore  CONTRIBUTING.md  README.md  option_mapping.json  run_test.py  test_config.py  test_suite_list.xml  test_utils.py
.github/: CODEOWNERS
.github/workflows/: ci_lin.yml  ci_win.yml
api_coverage/: api_coverage.xml  test_api_coverage.py  test_drivers.xml
api_coverage/config/: TEMPLATE_cublas_api_coverage.xml
applications/: applications.xml  test_applications.pl  test_applications.py  test_drivers.xml  timelimit.xml
applications/config/: TEMPLATE_llama.xml  TEMPLATE_llama_cmake_migration.xml
behavior_tests/: behavior_tests.xml  grep_option.sh  negative_test.cfg  test_behavior.py  test_drivers.xml  timelimit.xml
behavior_tests/config/: TEMPLATE_behavior_tests.xml  TEMPLATE_behavior_tests_after_11.5.xml  TEMPLATE_behavior_tests_after_9.2.xml  TEMPLATE_behavior_tests_check_conflict-insertion.xml  TEMPLATE_behavior_tests_execute_nofile.xml  TEMPLATE_behavior_tests_execute_nofile_lin.xml  TEMPLATE_behavior_tests_lin.xml  TEMPLATE_behavior_tests_lin_after_10.2.xml  TEMPLATE_behavior_tests_lin_after_11.5.xml  TEMPLATE_behavior_tests_vec.xml  TEMPLATE_behavior_tests_win.xml  bt-ct-default-out-folder.xml  cannot-acc-dir-in-db.xml  execute_from_cuda_path.xml  ngt-in-root-path.xml  test_soft_link_folder.xml
behavior_tests/src/cmake_dpct_helper_add_mkl_to_target/: CMakeLists.txt  do_test.py  fft.dp.cpp
behavior_tests/src/cmake_dpct_helper_find_package/: CMakeLists.txt  main.dp.cpp
behavior_tests/src/cmake_dpct_helper_sycl_compile/: CMakeLists.txt  a.dp.cpp  b.dp.cpp  c.dp.cpp  d.dp.cpp  do_test.py  header.dp.hpp  main.dp.cpp
behavior_tests/src/cmake_target_link_libraries/: CMakeLists.txt  do_test.py  main.dp.cpp
features/: features.xml  test_drivers.xml  test_feature.py
features/config/: TEMPLATE_asm.xml  TEMPLATE_autoGenMakefile.xml  TEMPLATE_backprop.xml  TEMPLATE_ccl.xml  TEMPLATE_ccl_api.xml  TEMPLATE_codepin.xml  TEMPLATE_complex.xml  TEMPLATE_const_opt.xml  TEMPLATE_constant_attr.xml  TEMPLATE_cooperative_groups.xml  TEMPLATE_cooperative_groups_data_manipulate.xml  TEMPLATE_cooperative_groups_reduce.xml  TEMPLATE_cpp_language_extensions.xml  TEMPLATE_cuBlas.xml  TEMPLATE_cuBlas_11.xml  TEMPLATE_cuBlas_12.xml  TEMPLATE_cuBlas_usm.xml  TEMPLATE_cuDNN.xml  TEMPLATE_cuDNN_lin.xml  TEMPLATE_cuDNN_skip_double.xml  TEMPLATE_cuDNN_skip_double_v8.xml  TEMPLATE_cuDNN_v7.xml  TEMPLATE_cuDNN_v8.xml  TEMPLATE_cuFFT.xml  TEMPLATE_cuParse.xml  TEMPLATE_cuRand.xml  TEMPLATE_cub.xml  TEMPLATE_cub_device.xml  TEMPLATE_cub_device_radix_sort.xml  TEMPLATE_cub_device_segmented_sort.xml  TEMPLATE_cub_transform_iterator.xml  TEMPLATE_cub_unique_by_key.xml  TEMPLATE_cudnn_multiple_files.xml  TEMPLATE_cusolver.xml  TEMPLATE_cusolver_range.xml  TEMPLATE_cusparse.xml  TEMPLATE_cusparse_after_101_skip_double.xml  TEMPLATE_cusparse_after_10_skip_double.xml  TEMPLATE_cusparse_after_112_skip_double.xml  TEMPLATE_cusparse_after_112_skip_double_usm.xml  (+120 more)
help_function/: README.md  help_function.xml  test_drivers.xml  test_help.py  timelimit.xml
help_function/config/: TEMPLATE_help_function.xml  TEMPLATE_help_function_before_11_skip_double.xml  TEMPLATE_help_function_blas_usm.xml  TEMPLATE_help_function_blas_usmnone.xml  TEMPLATE_help_function_dnnl_usmnone_skip_double_v8.xml  TEMPLATE_help_function_dnnl_usmnone_v8.xml  TEMPLATE_help_function_eanble_cuda_backend.xml  TEMPLATE_help_function_fft_buffer.xml  TEMPLATE_help_function_fft_usm.xml  TEMPLATE_help_function_skip_cpu_gpu.xml  TEMPLATE_help_function_skip_cuda_backend.xml  TEMPLATE_help_function_skip_double.xml  TEMPLATE_help_function_skip_usmnone.xml  TEMPLATE_help_function_sparse_buffer.xml  TEMPLATE_help_function_sparse_usm.xml  TEMPLATE_help_function_usm.xml  TEMPLATE_help_function_usmnone.xml  TEMPLATE_help_function_usmnone_skip_double.xml  TEMPLATE_syclct_help_function_image_wrapper_usm.xml  cpu_device_index_initializaion_test.xml  image_image_wrapper.xml  image_wrapper.xml  image_wrapper_usm.xml  kernel_function_lin.xml  kernel_function_win.xml  multi_definition_test_lin.xml  test_default_queue_2.xml
help_function/image_array/: image_array.cpp
help_function/src/: a.out  array_copy.cpp  asm.cpp  assign_device_vector.cpp  async_exception.cpp  atomic_add_float.cpp  atomic_atomic_fetch_sub.cpp  atomic_compare_exchange_strong.cpp  atomic_fetch_compare_inc.cpp  atomic_ref_ext_api.cpp  atomics_noneusm_verification.cpp  atomics_usm_verification.cpp  bindless_images.cpp  blas_extension_api_buffer.cpp  blas_extension_api_usm.cpp  blas_utils_geqrf-complex-usm.cpp  blas_utils_geqrf-complex.cpp  blas_utils_geqrf-usm.cpp  blas_utils_geqrf.cpp  blas_utils_get_transpose.cpp  blas_utils_get_value.cpp  blas_utils_get_value_usm.cpp  blas_utils_getrf-complex-usm.cpp  blas_utils_getrf-complex.cpp  blas_utils_getrf-usm.cpp  blas_utils_getrf.cpp  blas_utils_getrfnp-complex-usm.cpp  blas_utils_getrfnp-complex.cpp  blas_utils_getrfnp-usm.cpp  blas_utils_getrfnp.cpp  blas_utils_getri-complex-usm.cpp  blas_utils_getri-complex.cpp  blas_utils_getri-usm.cpp  blas_utils_getri.cpp  blas_utils_getrs-complex-usm.cpp  blas_utils_getrs-complex.cpp  blas_utils_getrs-usm.cpp  blas_utils_getrs.cpp  blas_utils_parameter_wrapper_buf.cpp  blas_utils_parameter_wrapper_usm.cpp  (+185 more)
multi_devices/: multi_devices.xml  test_drivers.xml  test_multi_devices.py
multi_devices/config/: TEMPLATE_multi_devices.xml
multi_devices/src/: rng.cpp
regressions/: regressions.xml  test_drivers.xml  test_regression.py
regressions/config/: TEMPLATE_regressions.xml  TEMPLATE_regressions_cuda12.0_not_support.xml  TEMPLATE_regressions_double.xml  TEMPLATE_regressions_linux.xml  TEMPLATE_regressions_thrust.xml  test-1126-1.xml  test-1247.xml  test-1399.xml  test-1582.xml  test-1587.xml  test-1601.xml  test-1901.xml  test-2014.xml  (+1 more)
samples/: samples.xml  test_drivers.xml  test_samples.py
sanity/: sanity.cu
third-party-programs/: oneDPL_third-party-programs.txt  third-party-programs.txt
user_guide_samples/: test_drivers.xml  test_guide.py  timelimit.xml  user_guide_samples.xml
(+1501 files in other folders)
